--- a/build
+++ b/build
@@ -26,7 +26,7 @@ host_build() {
 
 cross_build() {
 	local a
-	for a in amd64 arm64 s390x; do
+	for a in amd64 arm64 s390x ppc64le; do
 		echo "Building $a/$1"
 		mkdir -p "bin/$a"
 		CGO_ENABLED=0 GOARCH=$a \
